# kagent

./: .gitignore  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTION.md  DEVELOPMENT.md  Makefile  README.md
.devcontainer/: devcontainer.json
.github/: labeler.yml
.github/workflows/: ci.yaml  image-scan.yaml  label-pull-requests.yml  lint-python.yaml  run-agent-framework-test.yaml  tag.yaml  tools_tests.yaml
contrib/: README.md
contrib/addons/: postgres.yaml
contrib/cncf/: technical-review.md
contrib/security/: security-self-assessment.md
contrib/tools/: githubcopilot.mcp.yaml
design/: EP-685-kmcp.md
docker/skills-init/: Dockerfile
docs/: substrate-agentharness-lifecycle.md
examples/: modelconfig-with-tls.yaml
examples/substrate-openclaw/: README.md
go/: .dockerignore  .golangci.yaml  Dockerfile  Makefile  README.md  go.mod  go.sum
go-adk/: Dockerfile  Dockerfile.dox  FullAmdocsCA.crt  Makefile  go.mod  go.sum
go-adk/cmd/: main.go
go-adk/pkg/: README.md
go-adk/pkg/a2a/: consts.go  converter.go  error_mappings.go  error_mappings_test.go  executor.go  hitl.go  hitl_test.go  parts.go  runner.go  runner_test.go
go-adk/pkg/adk/: README.md  adk_adapter.go  adk_runner.go  adk_runner_test.go  agent.go  config_loader.go  config_loader_test.go  config_usage.go  config_usage_test.go  converters.go  converters_test.go  event.go  event_converter.go  event_test.go  mcp_client.go  part_converter.go  part_converter_test.go  run_args.go  runner.go  runner_test.go  session_adapter.go
go-adk/pkg/agent/: agent.go
go-adk/pkg/auth/: token.go
go-adk/pkg/config/: config_loader.go  config_loader_test.go  config_usage.go  config_usage_test.go  types.go
go-adk/pkg/core/: README.md  aggregator.go  consts.go  converters.go  event_converter.go  executor.go  hitl.go  hitl_consts_test.go  hitl_handlers_test.go  hitl_utils_test.go  imports_test.go  part_keys.go  push_notification_store.go  session.go  skills_tools.go  task_store.go  token.go  tracing.go  types.go
go-adk/pkg/mcp/: registry.go
go-adk/pkg/models/: anthropic.go  anthropic_adk.go  base.go  openai.go  openai_adk.go
go-adk/pkg/runner/: adapter.go
go-adk/pkg/session/: adapter.go  local_session.go  session.go
go-adk/pkg/skills/: discovery.go  discovery_test.go  shell.go  shell_test.go  skills_tools.go
go-adk/pkg/taskstore/: a2a_adapter.go  store.go
go-adk/pkg/telemetry/: tracing.go
go/adk/cmd/: main.go
go/api/adk/: types.go
go/api/client/: agent.go
go/api/database/: client.go  models.go
go/api/httpapi/: substrate.go  types.go
go/api/v1alpha1/: agent_types.go  mcpserver_types.go  modelconfig_types.go  zz_generated.deepcopy.go
go/api/v1alpha2/: agent_runtime_test.go  agent_spec_validation.go  agent_spec_validation_test.go  agent_types.go  agentharness_types.go  agentobject.go  common_types.go  common_types_test.go  modelconfig_types.go  remotemcpserver_types.go  sandboxagent_types.go  tlsconfig_cel_test.go  zz_generated.deepcopy.go
go/autogen/api/: models.go
go/autogen/client/: client.go  feedback.go  invoke.go  messages.go  models.go  run.go  session.go  team.go  tools.go  toolservers.go  types.go  types_test.go  validate.go
go/cli/: Makefile
go/cmd/controller/: main.go
go/config/rbac/: role.yaml
go/controller/cmd/: main.go  main_test.go
go/controller/translator/: adk_api_translator.go  adk_translator_golden_test.go  autogen_api_translator.go  autogen_translator_golden_test.go
go/hack/makeagentconfig/: main.go
go/hack/mockllm/: main.go
go/internal/a2a/: a2a_handler_mux.go  a2a_registrar.go  a2a_task_processor.go  manager.go
go/internal/adk/: types.go
go/internal/controller/: agent_controller.go  mcp_server_controller.go  mcp_server_tool_controller.go  mcp_server_tool_controller_test.go  (+5 more)
go/tools/: Dockerfile  README.md
helm/: README-testing.md  README.md
helm/kagent/: Chart-template.yaml  values.yaml
helm/kagent-crds/: Chart-template.yaml  values.yaml
python/: .dockerignore  Dockerfile  Dockerfile.app  Makefile  pyproject.toml
python/samples/adk/basic/basic/: agent.py
python/samples/crewai/poem_flow/: Dockerfile  README.md  agent.yaml  pyproject.toml
python/samples/crewai/poem_flow/src/poem_flow/: main.py
python/samples/crewai/poem_flow/src/poem_flow/crews/poem_crew/config/: agents.yaml
python/samples/crewai/research-crew/: Dockerfile  README.md  agent.yaml  pyproject.toml
python/samples/crewai/research-crew/src/research_crew/: crew.py
python/samples/crewai/research-crew/src/research_crew/config/: agents.yaml
python/samples/langgraph/currency/: Dockerfile  README.md  agent.yaml  pyproject.toml
python/samples/langgraph/currency/currency/: agent.py  cli.py
python/samples/openai/basic_agent/: pyproject.toml
python/src/adk/: kagent_session_service.py  kagent_task_store.py
python/src/autogenstudio/: __init__.py  cli.py
python/src/autogenstudio/database/: db_manager.py
python/src/autogenstudio/datamodel/: __init__.py  db.py  types.py
python/src/autogenstudio/sessionmanager/: sessionmanager.py
python/src/autogenstudio/teammanager/: teammanager.py
python/src/autogenstudio/web/: app.py  deps.py
python/src/autogenstudio/web/routes/: invoke.py  models.py  sessions.py  teams.py  tool_servers.py
python/src/kagent/: cli.py
python/src/kagent/conditions/: __init__.py  _termination.py
python/src/kagent/models/vertexai/: __init__.py  _anthropic_vertex_client.py  _gemini_vertexai_client.py  _model_info.py  types.py
python/src/kagent/models/vertexai/config/: __init__.py
python/src/kagent/tool_servers/: __init__.py  _streamable_http_mcp_tool_server.py
python/src/kagent/tools/utils/: tool_gen.py
python/tests/: test_yaml_comparer.py
python/tests/test_converters/: test_event_converter.py
reports/: cve-report.tmpl
scripts/: controller-digest-ldflags.sh  get-kagent
scripts/kind/: kind-config.yaml  setup-kind.sh  setup-metallb.sh
tests/: test_yaml_comparer.py
ui/: Dockerfile  Makefile  eslint.config.mjs  jest.setup.ts  next.config.ts  package-lock.json  package.json
ui/conf/: nginx.conf  supervisord.conf
(+833 files in other folders)
