[project]
name = "research-crew"
version = "0.1.0"
description = "A sample research crew using kagent-crewai"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kagent-crewai",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
kagent-crewai = { workspace = true }
